--- a/index.html
+++ b/index.html
@@ -2,14 +2,20 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8">
-  <title>Titre de la page</title>
+  <title>Explain Me Like I'm 5</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<p>Explaine Like I'm Five</p>
+<p>Explaine Like I'm 5 Years Old</p>
 
-<h1 id="notion" class="consigne">Expliquer les notions suivantes de manière simple, sans mot technique, comme si vous parliez à un enfant de 5 ans :)</h1>
+<main id="main">
+
+  <ul id="list">
+
+  </ul>
+
+</main>
 
 <p>ESPACE ou ENTRER pour afficher une notion.</p>
 
